# rust_matching_engine

./: Cargo.toml  README.md
crates/: Cargo.toml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: error.rs  lib.rs  matching_engine.rs  messages.rs  order.rs  order_book.rs  order_type.rs  side.rs  top_of_book.rs
crates/engine-core/tests/: regression_scenarios.rs
crates/engine-core/tests/data/: output_file_rust.csv
crates/engine-protocol/: Cargo.toml
crates/engine-protocol/src/: binary_codec.rs  csv_codec.rs  lib.rs  wire_types.rs
crates/engine-server/: Cargo.toml
crates/engine-server/examples/: query_top_of_book.rs  tcp_client.rs
crates/engine-server/src/: client.rs  config.rs  engine_task.rs  lib.rs  main.rs  server.rs  types.rs
crates/engine-trading-client/: Cargo.toml
crates/engine-trading-client/src/: app.rs  main.rs  network.rs  types.rs  ui.rs
crates/engine-trading-client/src/components/: help.rs  mod.rs  order_book.rs  order_entry.rs  order_list.rs  positions.rs  status_bar.rs  trade_list.rs
crates/engine-udp-adapter/: Cargo.toml
