[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure matching engine core: order book, matching engine, messages."

[dependencies]
# Used for timestamps
tokio = { version = "1.36", features = ["macros", "rt", "time"] }

[dev-dependencies]
engine-protocol = { path = "../engine-protocol" }

# This needs to be pure logic, and no networking, no protocol dependencies.
